Add features of admin UI & Update new version of pano from git.
