# domain/delivery/http/user_handler.go
@@ -14,11 +14,11 @@ type IUserHandler interface {
 	Get(ctx *gin.Context)
 	Create(ctx *gin.Context)
 	Update(ctx *gin.Context)
+	UpdateAccount(ctx *gin.Context)
 	UpdatePassword(ctx *gin.Context)
 	Login(ctx *gin.Context)
 	GetUserInfo(ctx *gin.Context)
-	// TODO hard delete
-	// Delete(ctx *gin.Context)
+	Delete(ctx *gin.Context)
 }
 
 // 實例化
@@ -26,17 +26,20 @@ func NewUserHandler(e *gin.RouterGroup, s user_service.IUserService) {
 	handler := UserHandler{UserService: s}
 
 	// router
-	e.POST("/login", handler.Login)
+
 	user := e.Group("/user")
+	user.POST("/login", handler.Login)
 	user.Use(middleware.JWTAuthMiddleware())
 	// TODO RBAC
 	{
 		user.GET("/info", handler.GetUserInfo)
 		user.GET("", handler.Get)
 		user.POST("", handler.Create)
-		user.PUT("", handler.Update)
+		user.PATCH("", handler.Update)
+		user.PUT("", handler.UpdateAccount)
 		user.PATCH("/password", handler.UpdatePassword)
 		user.PATCH("/password/self", handler.UpdateSelfPassword)
+		user.DELETE("", handler.Delete)
 	}
 }
 
@@ -103,7 +106,7 @@ func (uh *UserHandler) Create(ctx *gin.Context) {
 // @param data body model.UserUpdateForm true "body"
 // @Success 200 {object} utils.IH200
 // @Failure 500 {object} utils.IH500
-// @Router /api/user [put]
+// @Router /api/user [patch]
 func (uh *UserHandler) Update(ctx *gin.Context) {
 	// 表單驗證
 	var userForm model.UserUpdateForm
@@ -114,6 +117,34 @@ func (uh *UserHandler) Update(ctx *gin.Context) {
 	}
 
 	if err := uh.UserService.Update(&userForm); err != nil {
+		ctx.JSON(400, utils.H500(err.Error()))
+		return
+	}
+
+	ctx.JSON(200, utils.H200(nil, "更新成功"))
+}
+
+// @Summary 更新使用者帳號資訊
+// @Id 15
+// @Tags User
+// @version 1.0
+// @accept application/json
+// @produce application/json
+// @Security BearerAuth
+// @param data body model.UserUpdateAccountForm true "body"
+// @Success 200 {object} utils.IH200
+// @Failure 500 {object} utils.IH500
+// @Router /api/user [put]
+func (uh *UserHandler) UpdateAccount(ctx *gin.Context) {
+	// 表單驗證
+	var userForm model.UserUpdateAccountForm
+	if err := ctx.ShouldBindJSON(&userForm); err != nil {
+		ctx.JSON(400, utils.H500(err.Error()))
+		return
+	}
+
+	err := uh.UserService.UpdateAccount(&userForm)
+	if err != nil {
 		ctx.JSON(400, utils.H500(err.Error()))
 		return
 	}
@@ -140,7 +171,7 @@ func (uh *UserHandler) UpdatePassword(ctx *gin.Context) {
 		return
 	}
 
-	if err := uh.UserService.UpdatePassword(&userForm); err != nil {
+	if err := uh.UserService.UpdatePassword(&userForm, "all"); err != nil {
 		ctx.JSON(400, utils.H500(err.Error()))
 		return
 	}
@@ -160,7 +191,36 @@ func (uh *UserHandler) UpdatePassword(ctx *gin.Context) {
 // @Failure 500 {object} utils.IH500
 // @Router /api/user/password/self [patch]
 func (uh *UserHandler) UpdateSelfPassword(ctx *gin.Context) {
-	uh.UpdatePassword(ctx)
+	// 獲取JWT Claims
+	claims, exists := ctx.Get("jwtClaims")
+	if !exists {
+		ctx.JSON(400, utils.H500("invalid token"))
+		return
+	}
+
+	// 表單驗證
+	var userForm model.UserPasswordForm
+	if err := ctx.ShouldBindJSON(&userForm); err != nil {
+		ctx.JSON(400, utils.H500(err.Error()))
+		return
+	}
+
+	// 判斷是不是自己
+	userId := claims.(*utils.MyClaims).UserId
+	if userId != userForm.UserId {
+		ctx.JSON(400, utils.H500("只能更改自己的帳號密碼!"))
+		return
+	}
+
+	// any轉utils.MyClaims
+	userForm.UserId = userId
+
+	if err := uh.UserService.UpdatePassword(&userForm, "self"); err != nil {
+		ctx.JSON(400, utils.H500(err.Error()))
+		return
+	}
+
+	ctx.JSON(200, utils.H200(nil, "更新成功"))
 }
 
 // @Summary 使用者登入
@@ -172,7 +232,7 @@ func (uh *UserHandler) UpdateSelfPassword(ctx *gin.Context) {
 // @param data body model.UserLoginForm true "body"
 // @Success 200 {object} utils.IH200{data=model.UserToken}
 // @Failure 500 {object} utils.IH500
-// @Router /api/login [post]
+// @Router /api/user/login [post]
 func (uh *UserHandler) Login(ctx *gin.Context) {
 	// 表單驗證
 	var userForm model.UserLoginForm
@@ -208,4 +268,31 @@ func (uh *UserHandler) GetUserInfo(ctx *gin.Context) {
 	}
 
 	ctx.JSON(200, utils.H200(claims, ""))
+}
+
+// @Summary 刪除使用者
+// @Id 14
+// @Tags User
+// @version 1.0
+// @accept application/json
+// @produce application/json
+// @Security BearerAuth
+// @Success 200 {object} utils.IH200
+// @Failure 500 {object} utils.IH500
+// @Router /api/user [delete]
+func (uh *UserHandler) Delete(ctx *gin.Context) {
+	// 表單驗證
+	var userForm model.UserDeleteForm
+	if err := ctx.ShouldBindJSON(&userForm); err != nil {
+		ctx.JSON(400, utils.H500(err.Error()))
+		return
+	}
+
+	err := uh.UserService.Delete(&userForm)
+	if err != nil {
+		ctx.JSON(400, utils.H500(err.Error()))
+		return
+	}
+
+	ctx.JSON(200, utils.H200(nil, "刪除成功"))
 }
